[gd_scene load_steps=7 format=3 uid="uid://bwvh28771k2wg"]

[ext_resource type="Theme" uid="uid://ba5kplk6mf3lw" path="res://assets/themes/button.tres" id="1_hnj6p"]
[ext_resource type="Script" path="res://scripts/multiplayer_lobby.gd" id="1_lcdrt"]
[ext_resource type="Theme" uid="uid://b8ofkw57etf4m" path="res://assets/themes/text_input.tres" id="2_xbg64"]
[ext_resource type="Theme" uid="uid://bb7v4c8nt3y8l" path="res://assets/themes/text.tres" id="3_xjene"]
[ext_resource type="PackedScene" uid="uid://6g7c8ka0lodk" path="res://scenes/server_info.tscn" id="5_lnwfg"]
[ext_resource type="Script" path="res://scripts/server_browser.gd" id="7_gjrxb"]

[node name="Mode Selection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lcdrt")
join_button = ExtResource("5_lnwfg")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 164.0
offset_right = 943.0
offset_bottom = 228.0
theme = ExtResource("1_hnj6p")
text = "Create Lobby
"

[node name="Join" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 746.0
offset_top = 240.0
offset_right = 912.0
offset_bottom = 297.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 225.0
offset_right = 945.0
offset_bottom = 296.0
theme = ExtResource("1_hnj6p")
text = "Start"

[node name="server_input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 703.0
offset_top = 106.0
offset_right = 944.0
offset_bottom = 158.0
scale = Vector2(0.977749, 1.17928)
theme = ExtResource("2_xbg64")
placeholder_text = "Enter Lobby Name"
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 86.0
offset_right = 166.0
offset_bottom = 112.0
theme = ExtResource("3_xjene")
text = "Server List :"

[node name="server_browser" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_gjrxb")
server_info = ExtResource("5_lnwfg")

[node name="broadcast_timer" type="Timer" parent="server_browser"]

[node name="Label2" type="Label" parent="server_browser"]
layout_mode = 0
offset_left = 756.0
offset_top = 14.0
offset_right = 924.0
offset_bottom = 74.0
text = "Broadcaster: "

[node name="Panel" type="Panel" parent="server_browser"]
layout_mode = 0
offset_left = 77.0
offset_top = 116.0
offset_right = 574.0
offset_bottom = 598.0

[node name="server_label" type="HBoxContainer" parent="server_browser/Panel"]
layout_mode = 0
offset_right = 496.0
offset_bottom = 45.0

[node name="server_name" type="Label" parent="server_browser/Panel/server_label"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xjene")
text = "Server Name"
horizontal_alignment = 1

[node name="server_ip" type="Label" parent="server_browser/Panel/server_label"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xjene")
text = "IP"
horizontal_alignment = 1

[node name="player_number" type="Label" parent="server_browser/Panel/server_label"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xjene")
text = "Number of Players
"
horizontal_alignment = 1

[node name="join_server" type="Label" parent="server_browser/Panel/server_label"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_xjene")
text = "Join"
horizontal_alignment = 1

[node name="server_list" type="VBoxContainer" parent="server_browser/Panel"]
layout_mode = 0
offset_top = 44.0
offset_right = 495.0
offset_bottom = 484.0

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Host" to="server_browser/Panel/server_list" method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="text_changed" from="server_input" to="." method="_on_host_button_down"]
[connection signal="timeout" from="server_browser/broadcast_timer" to="server_browser" method="_on_broadcast_timer_timeout"]
